--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -81,32 +81,36 @@
                     android:layout_width="match_parent"
                     app:cardElevation="0dp"
                     app:cardCornerRadius="5dp"
-                    android:layout_margin="10dp"
-                    android:background="@color/colorWhite">
-                    <LinearLayout
+                    android:layout_margin="10dp">
+                    <FrameLayout
+                        android:background="@drawable/border"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
-                        android:layout_gravity="center"
-                        android:orientation="horizontal"
-                        android:gravity="center">
-                        <ImageView
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
-                            android:scaleType="fitXY"
-                            android:background="@color/gray"/>
-                        <TextView
-                            android:layout_width="65dp"
-                            android:maxLines="2"
+                        android:layout_height="match_parent">
+                        <LinearLayout
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Peraturan dan Pasal"
                             android:layout_margin="10dp"
-                            android:textSize="12sp"
-                            android:layout_marginEnd="32dp"
-                            android:layout_marginRight="32dp"
-                            android:textColor="@color/colorHitam"
-                            android:fontFamily="@font/roboto"/>
-                    </LinearLayout>
+                            android:layout_gravity="center"
+                            android:orientation="horizontal"
+                            android:gravity="center">
+                            <ImageView
+                                android:layout_width="40dp"
+                                android:layout_height="40dp"
+                                android:scaleType="fitXY"
+                                android:background="@color/gray"/>
+                            <TextView
+                                android:layout_width="65dp"
+                                android:maxLines="2"
+                                android:layout_height="wrap_content"
+                                android:text="Peraturan dan Pasal"
+                                android:layout_margin="10dp"
+                                android:textSize="12sp"
+                                android:layout_marginEnd="32dp"
+                                android:layout_marginRight="32dp"
+                                android:textColor="@color/colorHitam"
+                                android:fontFamily="@font/roboto"/>
+                        </LinearLayout>
+                    </FrameLayout>
                 </androidx.cardview.widget.CardView>
                 <androidx.cardview.widget.CardView
                     android:id="@+id/menu_pelanggaran"
@@ -116,30 +120,35 @@
                     app:cardCornerRadius="5dp"
                     android:layout_margin="10dp"
                     android:background="@color/colorWhite">
-                    <LinearLayout
+                    <FrameLayout
+                        android:background="@drawable/border"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_margin="10dp"
-                        android:orientation="horizontal"
-                        android:gravity="center">
-                        <ImageView
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
-                            android:scaleType="fitXY"
-                            android:background="@color/gray"/>
-                        <TextView
-                            android:layout_width="65dp"
+                        android:layout_height="match_parent">
+                        <LinearLayout
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Daftar Point Pelanggaran"
+                            android:layout_gravity="center"
                             android:layout_margin="10dp"
-                            android:textSize="12sp"
-                            android:maxLines="2"
-                            android:layout_marginEnd="32dp"
-                            android:layout_marginRight="32dp"
-                            android:textColor="@color/colorHitam"
-                            android:fontFamily="@font/roboto"/>
-                    </LinearLayout>
+                            android:orientation="horizontal"
+                            android:gravity="center">
+                            <ImageView
+                                android:layout_width="40dp"
+                                android:layout_height="40dp"
+                                android:scaleType="fitXY"
+                                android:background="@color/gray"/>
+                            <TextView
+                                android:layout_width="65dp"
+                                android:layout_height="wrap_content"
+                                android:text="Daftar Point Pelanggaran"
+                                android:layout_margin="10dp"
+                                android:textSize="12sp"
+                                android:maxLines="2"
+                                android:layout_marginEnd="32dp"
+                                android:layout_marginRight="32dp"
+                                android:textColor="@color/colorHitam"
+                                android:fontFamily="@font/roboto"/>
+                        </LinearLayout>
+                    </FrameLayout>
                 </androidx.cardview.widget.CardView>
                 <androidx.cardview.widget.CardView
                     android:id="@+id/menu_daftar_kelas"
@@ -149,30 +158,35 @@
                     app:cardCornerRadius="5dp"
                     android:layout_margin="10dp"
                     android:background="@color/colorWhite">
-                    <LinearLayout
+                    <FrameLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_margin="10dp"
-                        android:orientation="horizontal"
-                        android:gravity="center">
-                        <ImageView
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
-                            android:scaleType="fitXY"
-                            android:background="@color/gray"/>
-                        <TextView
-                            android:layout_width="70dp"
+                        android:background="@drawable/border"
+                        android:layout_height="match_parent">
+                        <LinearLayout
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Lihat Daftar Kelas"
-                            android:layout_margin="5dp"
-                            android:textSize="12sp"
-                            android:maxLines="2"
-                            android:layout_marginEnd="32dp"
-                            android:layout_marginRight="32dp"
-                            android:textColor="@color/colorHitam"
-                            android:fontFamily="@font/roboto"/>
-                    </LinearLayout>
+                            android:layout_gravity="center"
+                            android:layout_margin="10dp"
+                            android:orientation="horizontal"
+                            android:gravity="center">
+                            <ImageView
+                                android:layout_width="40dp"
+                                android:layout_height="40dp"
+                                android:scaleType="fitXY"
+                                android:background="@color/gray"/>
+                            <TextView
+                                android:layout_width="70dp"
+                                android:layout_height="wrap_content"
+                                android:text="Lihat Daftar Kelas"
+                                android:layout_margin="5dp"
+                                android:textSize="12sp"
+                                android:maxLines="2"
+                                android:layout_marginEnd="32dp"
+                                android:layout_marginRight="32dp"
+                                android:textColor="@color/colorHitam"
+                                android:fontFamily="@font/roboto"/>
+                        </LinearLayout>
+                    </FrameLayout>
                 </androidx.cardview.widget.CardView>
                 <androidx.cardview.widget.CardView
                     android:id="@+id/menu_lainya"
@@ -182,30 +196,35 @@
                     app:cardCornerRadius="5dp"
                     android:layout_margin="10dp"
                     android:background="@color/colorWhite">
-                    <LinearLayout
+                    <FrameLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_margin="10dp"
-                        android:orientation="horizontal"
-                        android:gravity="center">
-                        <ImageView
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
-                            android:scaleType="fitXY"
-                            android:background="@color/gray"/>
-                        <TextView
-                            android:layout_width="65dp"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/border">
+                        <LinearLayout
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Lainya"
+                            android:layout_gravity="center"
                             android:layout_margin="10dp"
-                            android:layout_marginEnd="32dp"
-                            android:maxLines="2"
-                            android:textSize="12sp"
-                            android:layout_marginRight="32dp"
-                            android:textColor="@color/colorHitam"
-                            android:fontFamily="@font/roboto"/>
-                    </LinearLayout>
+                            android:orientation="horizontal"
+                            android:gravity="center">
+                            <ImageView
+                                android:layout_width="40dp"
+                                android:layout_height="40dp"
+                                android:scaleType="fitXY"
+                                android:background="@color/gray"/>
+                            <TextView
+                                android:layout_width="65dp"
+                                android:layout_height="wrap_content"
+                                android:text="Lainya"
+                                android:layout_margin="10dp"
+                                android:layout_marginEnd="32dp"
+                                android:maxLines="2"
+                                android:textSize="12sp"
+                                android:layout_marginRight="32dp"
+                                android:textColor="@color/colorHitam"
+                                android:fontFamily="@font/roboto"/>
+                        </LinearLayout>
+                    </FrameLayout>
                 </androidx.cardview.widget.CardView>
             </GridLayout>
             <LinearLayout
