--- a/app/src/main/res/layout/point_items.xml
+++ b/app/src/main/res/layout/point_items.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+
     android:id="@+id/container_point_item"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -8,36 +9,45 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
     <TextView
+        app:fontFamily="@font/roboto"
+
         android:id="@+id/code_point"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_weight="1"
+        android:layout_marginEnd="20dp"
+        android:layout_weight="1.1"
         android:textAlignment="center"
-        android:textSize="20sp"
+        android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="@string/code" />
+        tools:text="@string/code"
+        android:gravity="center_horizontal" />
 
     <TextView
+        app:fontFamily="@font/roboto"
         android:id="@+id/description_point"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="1dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_weight="1"
+        android:layout_marginEnd="1dp"
+        android:layout_weight="0.8"
         tools:text="@string/deskripsi"
-        android:textAlignment="center"
-        android:textSize="20sp"
+        android:textAlignment="textStart"
+        android:textSize="12sp"
+        android:lineSpacingExtra="2sp"
+        android:translationY="-0.97sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:gravity="start" />
 
     <TextView
+        app:fontFamily="@font/roboto"
+
         android:id="@+id/point"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -47,8 +57,9 @@
         android:layout_weight="1"
         tools:text="@string/point"
         android:textAlignment="center"
-        android:textSize="20sp"
+        android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:gravity="center_horizontal" />
 </LinearLayout>
