redesign halaman home

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -43,7 +43,7 @@
                 android:searchIcon="@drawable/sercing"
                 android:layout_gravity="center_horizontal"
                 android:gravity="center"
-                android:queryHint="Cari Siswa Berdasarkan NIS"
+                android:queryHint="Cari siswa berdasarkan nis"
                 android:background="@drawable/background_search_home"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
@@ -69,19 +69,21 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginLeft="20dp"/>
-            <GridLayout
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:rowCount="2"
-                android:layout_gravity="center"
-                android:columnCount="2">
+                android:orientation="horizontal"
+                android:layout_marginStart="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="15dp">
                 <androidx.cardview.widget.CardView
                     android:id="@+id/menu_peraturan"
                     android:layout_height="90dp"
-                    android:layout_width="match_parent"
+                    android:layout_width="150dp"
                     app:cardElevation="0dp"
-                    app:cardCornerRadius="5dp"
-                    android:layout_margin="10dp">
+                    app:cardCornerRadius="5dp">
                     <FrameLayout
                         android:background="@drawable/border"
                         android:layout_width="match_parent"
@@ -89,7 +91,6 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_margin="10dp"
                             android:layout_gravity="center"
                             android:orientation="horizontal"
                             android:gravity="center">
@@ -113,12 +114,13 @@
                     </FrameLayout>
                 </androidx.cardview.widget.CardView>
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/menu_pelanggaran"
                     android:layout_height="90dp"
-                    android:layout_width="match_parent"
+                    android:layout_width="150dp"
                     app:cardElevation="0dp"
+                    android:id="@+id/menu_pelanggaran"
                     app:cardCornerRadius="5dp"
-                    android:layout_margin="10dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginLeft="10dp"
                     android:background="@color/colorWhite">
                     <FrameLayout
                         android:background="@drawable/border"
@@ -150,23 +152,30 @@
                         </LinearLayout>
                     </FrameLayout>
                 </androidx.cardview.widget.CardView>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginStart="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginRight="20dp">
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/menu_daftar_kelas"
                     android:layout_height="90dp"
-                    android:layout_width="match_parent"
+                    android:layout_width="150dp"
                     app:cardElevation="0dp"
-                    app:cardCornerRadius="5dp"
-                    android:layout_margin="10dp"
-                    android:background="@color/colorWhite">
+                    android:id="@+id/menu_daftar_kelas"
+                    android:layout_marginTop="15dp"
+                    app:cardCornerRadius="5dp">
                     <FrameLayout
-                        android:layout_width="match_parent"
                         android:background="@drawable/border"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent">
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:layout_margin="10dp"
                             android:orientation="horizontal"
                             android:gravity="center">
                             <ImageView
@@ -175,12 +184,12 @@
                                 android:scaleType="fitXY"
                                 android:background="@color/gray"/>
                             <TextView
-                                android:layout_width="70dp"
+                                android:layout_width="65dp"
+                                android:maxLines="2"
                                 android:layout_height="wrap_content"
                                 android:text="Lihat Daftar Kelas"
-                                android:layout_margin="5dp"
+                                android:layout_margin="10dp"
                                 android:textSize="12sp"
-                                android:maxLines="2"
                                 android:layout_marginEnd="32dp"
                                 android:layout_marginRight="32dp"
                                 android:textColor="@color/colorHitam"
@@ -191,15 +200,17 @@
                 <androidx.cardview.widget.CardView
                     android:id="@+id/menu_lainya"
                     android:layout_height="90dp"
-                    android:layout_width="match_parent"
+                    android:layout_width="150dp"
                     app:cardElevation="0dp"
                     app:cardCornerRadius="5dp"
-                    android:layout_margin="10dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginLeft="10dp"
                     android:background="@color/colorWhite">
                     <FrameLayout
+                        android:background="@drawable/border"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@drawable/border">
+                        android:layout_height="match_parent">
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -217,21 +228,22 @@
                                 android:layout_height="wrap_content"
                                 android:text="Lainya"
                                 android:layout_margin="10dp"
-                                android:layout_marginEnd="32dp"
-                                android:maxLines="2"
                                 android:textSize="12sp"
+                                android:maxLines="2"
+                                android:layout_marginEnd="32dp"
                                 android:layout_marginRight="32dp"
                                 android:textColor="@color/colorHitam"
                                 android:fontFamily="@font/roboto"/>
                         </LinearLayout>
                     </FrameLayout>
                 </androidx.cardview.widget.CardView>
-            </GridLayout>
+            </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/colorWhite"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:layout_marginTop="10dp">
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -241,72 +253,46 @@
                     android:textColor="@color/colorHitam"
                     android:layout_marginLeft="20dp"
                     android:layout_marginStart="20dp"/>
-                <!-- test pas di run -->
                 <ImageView
+                    android:layout_marginTop="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="80dp"
-                    android:layout_marginTop="5dp"
-                    android:src="@drawable/test"/>
+                    android:src="@drawable/test"
+                    android:scaleType="fitXY"/>
                 <ImageView
+                    android:layout_marginTop="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="80dp"
-                    android:layout_marginTop="5dp"
-                    android:src="@drawable/test"/>
+                    android:src="@drawable/test"
+                    android:scaleType="fitXY"/>
                 <ImageView
+                    android:layout_marginTop="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="80dp"
-                    android:layout_marginTop="5dp"
-                    android:src="@drawable/test"/>
+                    android:src="@drawable/test"
+                    android:scaleType="fitXY"/>
                 <ImageView
+                    android:layout_marginTop="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="80dp"
-                    android:layout_marginTop="5dp"
-                    android:src="@drawable/test"/>
+                    android:src="@drawable/test"
+                    android:scaleType="fitXY"/>
                 <ImageView
+                    android:layout_marginTop="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="80dp"
-                    android:layout_marginTop="5dp"
-                    android:src="@drawable/test"/>
+                    android:src="@drawable/test"
+                    android:scaleType="fitXY"/>
                 <ImageView
+                    android:layout_marginTop="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="80dp"
-                    android:layout_marginTop="5dp"
-                    android:src="@drawable/test"/>
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    android:layout_marginTop="5dp"
-                    android:src="@drawable/test"/>
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    android:layout_marginTop="5dp"
-                    android:src="@drawable/test"/>
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    android:layout_marginTop="5dp"
-                    android:src="@drawable/test"/>
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    android:layout_marginTop="5dp"
-                    android:src="@drawable/test"/>
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    android:layout_marginTop="5dp"
-                    android:src="@drawable/test"/>
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    android:layout_marginTop="5dp"
-                    android:src="@drawable/test"/>
+                    android:src="@drawable/test"
+                    android:scaleType="fitXY"/>
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_aktivitas_new"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:padding="20dp"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     android:orientation="vertical"
                     tools:listitem="@layout/item_aktivitas_new"/>
