--- a/app/src/main/res/layout-xlarge/fragment_home.xml
+++ b/app/src/main/res/layout-xlarge/fragment_home.xml
@@ -78,77 +78,87 @@
                 android:layout_marginEnd="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginTop="15dp">
+
                 <androidx.cardview.widget.CardView
                     android:id="@+id/menu_peraturan"
+                    android:layout_width="200dp"
                     android:layout_height="90dp"
-                    android:layout_width="175dp"
-                    app:cardElevation="0dp"
-                    app:cardCornerRadius="5dp">
+                    app:cardCornerRadius="5dp"
+                    app:cardElevation="0dp">
+
                     <FrameLayout
-                        android:background="@drawable/border"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="match_parent"
+                        android:background="@drawable/border">
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:orientation="horizontal"
-                            android:gravity="center">
+                            android:gravity="center"
+                            android:orientation="horizontal">
+
                             <ImageView
                                 android:layout_width="40dp"
                                 android:layout_height="40dp"
-                                android:scaleType="fitXY"
-                                android:background="@color/gray"/>
+                                android:background="@color/gray"
+                                android:scaleType="fitXY" />
+
                             <TextView
                                 android:layout_width="65dp"
-                                android:maxLines="2"
                                 android:layout_height="wrap_content"
-                                android:text="Peraturan dan Pasal"
                                 android:layout_margin="10dp"
-                                android:textSize="12sp"
                                 android:layout_marginEnd="32dp"
                                 android:layout_marginRight="32dp"
+                                android:fontFamily="@font/roboto"
+                                android:maxLines="2"
+                                android:text="Peraturan dan Pasal"
                                 android:textColor="@color/colorHitam"
-                                android:fontFamily="@font/roboto"/>
+                                android:textSize="12sp" />
                         </LinearLayout>
                     </FrameLayout>
                 </androidx.cardview.widget.CardView>
+
                 <androidx.cardview.widget.CardView
-                    android:layout_height="90dp"
-                    android:layout_width="175dp"
-                    app:cardElevation="0dp"
                     android:id="@+id/menu_pelanggaran"
-                    app:cardCornerRadius="5dp"
+                    android:layout_width="200dp"
+                    android:layout_height="90dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginLeft="10dp"
-                    android:background="@color/colorWhite">
+                    android:background="@color/colorWhite"
+                    app:cardCornerRadius="5dp"
+                    app:cardElevation="0dp">
+
                     <FrameLayout
-                        android:background="@drawable/border"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="match_parent"
+                        android:background="@drawable/border">
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:layout_margin="10dp"
-                            android:orientation="horizontal"
-                            android:gravity="center">
+                            android:gravity="center"
+                            android:orientation="horizontal">
+
                             <ImageView
                                 android:layout_width="40dp"
                                 android:layout_height="40dp"
-                                android:scaleType="fitXY"
-                                android:background="@color/gray"/>
+                                android:background="@color/gray"
+                                android:scaleType="fitXY" />
+
                             <TextView
                                 android:layout_width="65dp"
                                 android:layout_height="wrap_content"
-                                android:text="Daftar Point Pelanggaran"
                                 android:layout_margin="10dp"
-                                android:textSize="12sp"
-                                android:maxLines="2"
                                 android:layout_marginEnd="32dp"
                                 android:layout_marginRight="32dp"
+                                android:fontFamily="@font/roboto"
+                                android:maxLines="2"
+                                android:text="Daftar Point Pelanggaran"
                                 android:textColor="@color/colorHitam"
-                                android:fontFamily="@font/roboto"/>
+                                android:textSize="12sp" />
                         </LinearLayout>
                     </FrameLayout>
                 </androidx.cardview.widget.CardView>
@@ -161,79 +171,89 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginRight="20dp">
+
                 <androidx.cardview.widget.CardView
-                    android:layout_height="90dp"
-                    android:layout_width="175dp"
-                    app:cardElevation="0dp"
                     android:id="@+id/menu_daftar_kelas"
+                    android:layout_width="200dp"
+                    android:layout_height="90dp"
                     android:layout_marginTop="15dp"
-                    app:cardCornerRadius="5dp">
+                    app:cardCornerRadius="5dp"
+                    app:cardElevation="0dp">
+
                     <FrameLayout
-                        android:background="@drawable/border"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="match_parent"
+                        android:background="@drawable/border">
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:orientation="horizontal"
-                            android:gravity="center">
+                            android:gravity="center"
+                            android:orientation="horizontal">
+
                             <ImageView
                                 android:layout_width="40dp"
                                 android:layout_height="40dp"
-                                android:scaleType="fitXY"
-                                android:background="@color/gray"/>
+                                android:background="@color/gray"
+                                android:scaleType="fitXY" />
+
                             <TextView
                                 android:layout_width="65dp"
-                                android:maxLines="2"
                                 android:layout_height="wrap_content"
-                                android:text="Lihat Daftar Kelas"
                                 android:layout_margin="10dp"
-                                android:textSize="12sp"
                                 android:layout_marginEnd="32dp"
                                 android:layout_marginRight="32dp"
+                                android:fontFamily="@font/roboto"
+                                android:maxLines="2"
+                                android:text="Lihat Daftar Kelas"
                                 android:textColor="@color/colorHitam"
-                                android:fontFamily="@font/roboto"/>
+                                android:textSize="12sp" />
                         </LinearLayout>
                     </FrameLayout>
                 </androidx.cardview.widget.CardView>
+
                 <androidx.cardview.widget.CardView
                     android:id="@+id/menu_lainya"
+                    android:layout_width="200dp"
                     android:layout_height="90dp"
-                    android:layout_width="175dp"
-                    app:cardElevation="0dp"
-                    app:cardCornerRadius="5dp"
-                    android:layout_marginTop="15dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginLeft="10dp"
-                    android:background="@color/colorWhite">
+                    android:layout_marginTop="15dp"
+                    android:background="@color/colorWhite"
+                    app:cardCornerRadius="5dp"
+                    app:cardElevation="0dp">
+
                     <FrameLayout
-                        android:background="@drawable/border"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="match_parent"
+                        android:background="@drawable/border">
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:layout_margin="10dp"
-                            android:orientation="horizontal"
-                            android:gravity="center">
+                            android:gravity="center"
+                            android:orientation="horizontal">
+
                             <ImageView
                                 android:layout_width="40dp"
                                 android:layout_height="40dp"
-                                android:scaleType="fitXY"
-                                android:background="@color/gray"/>
+                                android:background="@color/gray"
+                                android:scaleType="fitXY" />
+
                             <TextView
                                 android:layout_width="65dp"
                                 android:layout_height="wrap_content"
-                                android:text="Lainya"
                                 android:layout_margin="10dp"
-                                android:textSize="12sp"
-                                android:maxLines="2"
                                 android:layout_marginEnd="32dp"
                                 android:layout_marginRight="32dp"
+                                android:fontFamily="@font/roboto"
+                                android:maxLines="2"
+                                android:text="Lainya"
                                 android:textColor="@color/colorHitam"
-                                android:fontFamily="@font/roboto"/>
+                                android:textSize="12sp" />
                         </LinearLayout>
                     </FrameLayout>
                 </androidx.cardview.widget.CardView>
