--- a/app/src/main/res/layout/point_items.xml
+++ b/app/src/main/res/layout/point_items.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    android:paddingTop="23dp"
-    android:paddingBottom="23dp"
     android:id="@+id/container_point_item"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -10,6 +8,8 @@
     android:layout_height="60dp"
     android:orientation="horizontal">
     <TextView
+        android:layout_marginTop="23dp"
+        android:layout_marginBottom="23dp"
         android:id="@+id/code_point"
         tools:text="@string/code"
         android:layout_marginLeft="35dp"
@@ -22,7 +22,8 @@
         android:layout_marginStart="35dp" />
     <TextView
         android:id="@+id/description_point"
-
+        android:layout_marginBottom="14dp"
+        android:layout_marginTop="14dp"
         tools:text="@string/deskripsi"
         android:layout_marginLeft="41dp"
         android:textAlignment="textStart"
@@ -33,6 +34,8 @@
         android:layout_marginStart="41dp"
         android:gravity="start" />
     <TextView
+        android:layout_marginTop="23dp"
+        android:layout_marginBottom="23dp"
         android:id="@+id/point"
         tools:text="@string/point"
         android:layout_marginLeft="32dp"
