--- a/app/src/main/res/layout/fragment_pengaduan.xml
+++ b/app/src/main/res/layout/fragment_pengaduan.xml
@@ -107,13 +107,16 @@
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
+
        <TextView
+           android:id="@+id/upload_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
-           app:fontFamily="@font/roboto"
            android:hint="@string/upload_bukti"
-           android:textSize="16sp"
            android:textColorHint="@color/colorWhite"
+           android:textSize="16sp"
+           android:visibility="visible"
+           app:fontFamily="@font/roboto"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton3"
            app:layout_constraintEnd_toEndOf="@+id/imageButton3"
            app:layout_constraintStart_toStartOf="@+id/imageButton3"
