--- a/app/src/main/res/layout/fragment_rpl.xml
+++ b/app/src/main/res/layout/fragment_rpl.xml
@@ -32,6 +32,7 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_rpl"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
