done pasal done peraturan done bab

--- a/app/src/main/res/layout/activity_detail_pasal.xml
+++ b/app/src/main/res/layout/activity_detail_pasal.xml
@@ -6,9 +6,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/colorbgPeraturan"
-    tools:context=".ui.DetailPasalActivity">
+    tools:context=".ui.detailpasal.DetailPasalActivity">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_pasal"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
