--- a/app/src/main/res/layout/item_detail_pasal.xml
+++ b/app/src/main/res/layout/item_detail_pasal.xml
@@ -29,26 +29,30 @@
                 android:layout_marginTop="25dp"
                 app:cardBackgroundColor="@color/colorPrimary"
                 app:cardCornerRadius="7dp">
+
                 <TextView
+                    android:id="@+id/id_pasal"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:textAlignment="center"
-                    android:textSize="40sp"
-                    android:textColor="@color/colorWhite"
+                    android:gravity="center"
                     android:text="1"
-                    android:gravity="center"/>
+                    android:textAlignment="center"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="40sp" />
             </androidx.cardview.widget.CardView>
+
             <TextView
+                android:id="@+id/desc_pasal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Tata Tertib Peserta didik SMK Telkom Purwokerto adalah peraturan-peraturan yang telah ditetapkan oleh Sekolah yang harus ditaati dan dilaksanakan oleh seluruh peserta didik SMK Telkom Purwokerto"
-                android:fontFamily="@font/robotoligth"
-                android:layout_marginTop="15dp"
-                android:layout_marginLeft="16dp"
                 android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="15dp"
                 android:layout_marginEnd="32dp"
-                android:textSize="16sp"
-                android:layout_marginRight="32dp"/>
+                android:layout_marginRight="32dp"
+                android:fontFamily="@font/robotoligth"
+                android:text="Tata Tertib Peserta didik SMK Telkom Purwokerto adalah peraturan-peraturan yang telah ditetapkan oleh Sekolah yang harus ditaati dan dilaksanakan oleh seluruh peserta didik SMK Telkom Purwokerto"
+                android:textSize="16sp" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
