--- a/app/src/main/res/layout/activity_detail_pelanggaran.xml
+++ b/app/src/main/res/layout/activity_detail_pelanggaran.xml
@@ -25,7 +25,7 @@
                 android:layout_height="match_parent"
                 android:layout_gravity=""
                 android:contentDescription="@string/bukti"
-                android:src="@drawable/cukur" />
+                tools:src="@drawable/cukur" />
         </LinearLayout>
 
         <LinearLayout
