--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -2,5 +2,6 @@
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">3.91.42.49</domain>
+        <domain includeSubdomains="true">54.210.29.24</domain>
     </domain-config>
 </network-security-config>
