--- a/app/src/main/res/layout/fragment_tja.xml
+++ b/app/src/main/res/layout/fragment_tja.xml
@@ -31,4 +31,9 @@
 
     </androidx.cardview.widget.CardView>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_tja"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </LinearLayout>
