--- a/app/src/main/res/layout/fragment_tkj.xml
+++ b/app/src/main/res/layout/fragment_tkj.xml
@@ -30,5 +30,9 @@
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_tkj"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
