Membuat halaman pengaduan

--- a/app/src/main/res/layout/fragment_pengaduan.xml
+++ b/app/src/main/res/layout/fragment_pengaduan.xml
@@ -47,12 +47,13 @@
                 android:layout_height="46dp"
                 android:background="@drawable/edittext_without_underline"
                 android:paddingLeft="16dp"
+                android:paddingRight="16dp"
                 android:paddingStart="16dp"
-                android:fontFamily="@font/roboto_regular"
+                app:fontFamily="@font/roboto_regular"
                 android:hint="@string/contoh_nis"
                 android:inputType="number"
                 android:textColorHint="@color/gray"
-                android:textSize="20sp" />
+                android:textSize="14sp" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
     <LinearLayout
